-------------------------------------------------------------------------------
Changes in version 1.102


Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 1.101

- Fixed include compatibility problem in sys/tryclockgettime.c.
  Thanks Amitai Schlair

- Added sysdep for __attribute__.

- Marked some symbols as "weak" to prevent link errors if they aren't
  defined by programs using -lbg.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 1.100

* This package now builds and installs as a shared library.
* Requires libtool to be installed.

- Added support to bg-installer for installing shared libraries with
  libtool.

- Fixed a bug in counting the length of signed and unsigned long long
  integers (0 was counted as having zero length).

- Fixed bug in error return of ibuf_openreadclose.  Thanks Gerrit Pape.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 1.041

- Modified cli-generate to add man page and HTML output options, and
  more formatting commands.

- Tweaked the hmac_finish prototype to properly indicate that the
  midstate is const and unmodified by the function.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 1.040

- Added cli-generate, a program to produce C header and source from
  command-line interface description files.
